// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageModal should render a Modal on tablet/desktop 1`] = `
<PageModalDesktop
  title="Hello world"
>
  This is a page modal
</PageModalDesktop>
`;

exports[`PageModal should render a Page on mobile 1`] = `
<PageModalMobile
  title="Hello world"
>
  This is a page modal
</PageModalMobile>
`;
